# SchafkopfBot

./: Cargo.toml  Trunk.toml
hothead/: Cargo.toml
hothead_web/: Cargo.toml  index.html
hothead_web/public/: main.css
hothead_web/src/: main.rs
hothead_web/src/components/: cards.rs  drop_zone.rs  hand.rs  mod.rs  playing_field.rs
schafkopf_lib/: Cargo.toml
schafkopf_lib/src/: lib.rs  main.rs
schafkopf_lib/src/schafkopf_env/: agent.rs  game_logic.rs  match_logic.rs  mod.rs
src/: lib.rs  main.rs
src-tauri/: tauri.conf.json
src/schafkopf/: game_state.rs
src/schafkopf_env/: game_state.rs
