[package]
name = "hothead_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
schafkopf_lib = { path = "../schafkopf_lib" }
getrandom = { version = "0.2", features = ["js"] }
